# lightning-whisper-mlx

./: .gitignore  documentation.md  pyproject.toml  stream.py  stream_2.py  stream_keyboard.py  test.py
lightning_whisper_mlx/: decoding.py  lightning.py  timing.py  torch_whisper.py  transcribe.py
