[project]
name = "lightning-whisper-mlx"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.8"
dependencies = [
    "huggingface-hub>=0.29.3",
    "mlx>=0.23.2",
    "mlx-lm",
    "numpy>=2.2.3",
    "pip>=25.0.1",
    "pyaudio>=0.2.14",
    "pynput>=1.8.0",
    "pyperclip>=1.9.0",
    "pysimplegui>=5.0.8.2",
    "rich>=13.9.4",
    "scipy>=1.15.2",
    "tcl>=0.2",
    "tiktoken>=0.9.0",
    "tqdm>=4.67.1",
]
